name:                aoc2016
version:             0.0.0.0
synopsis:            Advent of Code 2016
description:         My answers to <http://adventofcode.com/2016 Advent of Code 2016>
homepage:            https://github.com/ephemient/aoc2016
license:             MIT
license-file:        LICENSE
author:              Daniel Lin
maintainer:          ephemient@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable aoc2016
  main-is:             Main.lhs
  -- other-modules:
  other-extensions:    BangPatterns, FlexibleContexts, GADTs, ParallelListComp, RecordWildCards, TupleSections, ViewPatterns
  build-depends:
    base >=4.9 && <4.10,
    containers >=0.5 && <0.6,
    array >=0.5 && <0.6,
    bytestring >=0.10 && <0.11,
    cryptohash >=0.11 && <0.12,
    markdown-unlit
  ghc-options:         -pgmL markdown-unlit -threaded -with-rtsopts -N
  hs-source-dirs:      src
  default-language:    Haskell2010
