name:                aoc2016
version:             0.0.0.0
synopsis:            Advent of Code 2016
description:         My answers to <http://adventofcode.com/2016 Advent of Code 2016>
homepage:            https://github.com/ephemient/aoc2016
license:             MIT
license-file:        LICENSE
author:              Daniel Lin
maintainer:          ephemient@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
data-files:
  day1.txt, day2.txt, day3.txt, day4.txt, day5.txt, day6.txt, day7.txt,
  day8.txt, day9.txt, day10.txt, day11.txt, day12.txt, day13.txt, day14.txt,
  day15.txt, day16.txt, day17.txt, day18.txt, day19.txt, day20.txt, day21.txt,
  day22.txt, day23.txt, day24.txt, day25.txt
cabal-version:       >=1.10

executable aoc2016
  main-is:             Main.lhs
  other-modules:
    Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8, Day9, Day10, Day11, Day12,
    Day13, Day14, Day15, Day16, Day17, Day18, Day19, Day20, Day21, Day22, Day23,
    Day24, Day25
  other-extensions:    BangPatterns, FlexibleContexts, FlexibleInstances, GADTs, NegativeLiterals, ParallelListComp, RecordWildCards, TupleSections, ViewPatterns
  build-depends:
    base >=4.9 && <4.10,
    containers >=0.5 && <0.6,
    array >=0.5 && <0.6,
    bytestring >=0.10 && <0.11,
    markdown-unlit
  extra-libraries:     crypto
  ghc-options:         -pgmL markdown-unlit -threaded -with-rtsopts -N
  hs-source-dirs:      src
  default-language:    Haskell2010
